# echomesh

./: .gitignore  Makefile  README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/echomesh/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: echomesh_app.dart
lib/bridge_generated.dart/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/core/contacts/: contact.dart  contacts_store.dart
lib/core/persistence/: prefs.dart
lib/core/profile/: profile_store.dart
lib/core/qr/: pairing_payload.dart
lib/core/rust/: rust_node.dart
lib/core/theme/: appearance_store.dart  theme_builder.dart
lib/ui/: home_page.dart
lib/ui/chats/: chats_page.dart
lib/ui/contacts/: scan_qr_page.dart
lib/ui/profile/: profile_page.dart
lib/ui/settings/: settings_page.dart
lib/ui/shell/: app_shell.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: api.rs  frb_generated.rs  lib.rs
rust/src/node/: builder.rs  manager.rs  mod.rs  swarm_task.rs  transport.rs
test/: widget_test.dart
tool/: build_android.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
